--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -170,7 +170,6 @@ div[class^="profile"] {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 100px;
 }
 
 #challenge-canvas {
@@ -181,6 +180,12 @@ div[class^="profile"] {
 }
 
 #coding-area {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-flow: row wrap;
+   padding: 0 20px;
+
   .action-buttons,
   .movement-buttons {
     vertical-align: middle;
@@ -203,23 +208,67 @@ div[class^="profile"] {
       vertical-align: middle;
       font-size: 2.8em;
     }
+    &:before {
+     padding-right: 10px;
+    }
+    &:after {
+     padding-left: 10px;
+    }
   }
 }
 
+#start-button:before {
+ content: "8";
+}
+
+#quit-button:after {
+ content: "K";
+}
+
+#undo-button:before {
+ content:"v";
+}
+
 #turn-left:before {
-  content: "v";
-  padding-right: 10px;
+  content: "c";
 }
+
 #move-forward:after {
-  content: "L";
-  padding-left: 10px;
+  content: "G";
 }
+
 #turn-right:after {
-  content: "V";
-  padding-left: 10px;
+  content: "C";
 }
 
 .btn__block {
   display: flex;
   margin-bottom: 10px;
+}
+
+#score {
+ color: $red;
+ text-align: left;
+ padding: 20px 20px 0;
+}
+
+#play {
+ flex: 1 100%;
+}
+
+#move-list {
+  height: 320px;
+  overflow: auto;
+  text-align: left;
+  @extend %with-bg_border;
+
+  &::-webkit-scrollbar {
+   width: 6px;
+   background-color: $dark-brown;
+  }
+
+  &::-webkit-scrollbar-thumb {
+   background-color: $charcoal;
+   border-radius: 20px;
+  }
 }
