restructured stage picker and fixed playing area viewport

--- a/public/css/code.css
+++ b/public/css/code.css
@@ -84,6 +84,10 @@ h6 {
   padding: 10px 0;
 }
 
+#logo {
+  padding-left: 20px;
+}
+
 #logo,
 #menu {
   flex: 1 0 0;
@@ -163,7 +167,7 @@ div[class^=profile] {
 #playing-area {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 #challenge-canvas {
@@ -176,7 +180,7 @@ div[class^=profile] {
 #coding-area {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-flow: row wrap;
   padding: 0 20px;
 }
@@ -244,7 +248,8 @@ div[class^=profile] {
 #score {
   color: #db5a42;
   text-align: left;
-  padding: 20px 20px 0;
+  padding: 0 20px;
+  margin: 0;
 }
 
 #play {
@@ -263,6 +268,12 @@ div[class^=profile] {
 #move-list::-webkit-scrollbar-thumb {
   background-color: #534b3c;
   border-radius: 20px;
+}
+
+@media screen and (max-width: 1367px) {
+  #move-list {
+    height: 180px;
+  }
 }
 
 /*# sourceMappingURL=code.css.map */
