--- a/public/css/code.css
+++ b/public/css/code.css
@@ -218,6 +218,12 @@ h6 {
   display: inline-flex;
 }
 
+.profile__achievements img {
+  border: 2px solid #534b3c;
+  background-color: #ffd275;
+  padding: 1px;
+}
+
 .profile__playGame {
   display: flex;
   flex-flow: column;
